--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "jspdf-autotable": "^5.0.2",
     "pdfmake": "^0.2.18",
     "react": "^19.0.0",
+    "react-barcode-reader": "^0.0.2",
     "react-dom": "^19.0.0",
     "react-icons": "^5.5.0",
     "react-router-dom": "^7.3.0",
