--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/jest-dom": "^6.6.3",
     "@testing-library/react": "^16.2.0",
     "@testing-library/user-event": "^13.5.0",
+    "@zxing/library": "^0.21.3",
     "file-saver": "^2.0.5",
     "firebase": "^11.4.0",
     "jspdf": "^3.0.0",
@@ -33,7 +34,13 @@
     "extends": [
       "react-app",
       "react-app/jest"
-    ]
+    ],
+    "rules": {
+ 
+      "no-unused-vars": "off",  
+      "no-console": "off",       
+      "react-hooks/exhaustive-deps": "off" 
+    }
   },
   "browserslist": {
     "production": [
