--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-router-dom": "^7.3.0",
     "react-scripts": "5.0.1",
     "react-select": "^5.10.1",
+    "react-signature-canvas": "^1.1.0-alpha.2",
     "web-vitals": "^2.1.4",
     "xlsx": "^0.18.5"
   },
@@ -36,10 +37,9 @@
       "react-app/jest"
     ],
     "rules": {
- 
-      "no-unused-vars": "off",  
-      "no-console": "off",       
-      "react-hooks/exhaustive-deps": "off" 
+      "no-unused-vars": "off",
+      "no-console": "off",
+      "react-hooks/exhaustive-deps": "off"
     }
   },
   "browserslist": {
